Update R.css and fix vertical alignment issue Source: https://raw.githubusercontent.com/rstudio/rstudio/HEAD/src/cpp/session/resources/R.css

--- a/static/R.css
+++ b/static/R.css
@@ -1,10 +1,10 @@
 /*
  * R.css
  *
- * Copyright (C) 2022 by RStudio, PBC
+ * Copyright (C) 2022 by Posit Software, PBC
  *
- * Unless you have received this program directly from RStudio pursuant
- * to the terms of a commercial license agreement with RStudio, then
+ * Unless you have received this program directly from Posit Software pursuant
+ * to the terms of a commercial license agreement with Posit Software, then
  * this program is licensed to you under the terms of version 3 of the
  * GNU Affero General Public License. This program is distributed WITHOUT
  * ANY EXPRESS OR IMPLIED WARRANTY, INCLUDING THOSE OF NON-INFRINGEMENT,
@@ -125,7 +125,8 @@ table p {
    margin-bottom: 6px;
 }
 
-table[summary="R argblock"] tr td:first-child {
+h3.r-arguments-title + table tr td:first-child {
+   vertical-align: top;
    min-width: 24px;
    padding-right: 12px;
 }
